# ViralMarketingProject

./: .dockerignore  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  checks.yml  deploy.yml
accounts/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_is_active.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
scripts/: run.sh
